# lion

./: .clang-format  .gitattributes  .gitignore  404.html  CMakeLists.txt  Doxyfile  FixBundle.cmake.in  LICENSE  MANIFEST.in  Makefile  README.md  TODO.md  battery_few_sim_plots.m  battery_sim.slx  cell_sim.slx  cell_sim_plots.m  cffi_build.py  data_analysis.ipynb  entropy.ipynb  experiments.ipynb  forklift.ipynb  forklift.py  generated_heat.m  index.html  make.bat  print.html  pyproject.toml  requirements.txt  requirements_dev.txt  searchindex.js  searchindex.json  setup.cfg  setup.py  simulation_parameters.m  simulation_plots.m  toc.html  toc.js  vcpkg.json
.github/workflows/: mdbook-pages.yml  testing-macos.yml  testing-ubuntu.yml  testing-windows.yml  testing.yml  todo-gen.yml
cad/21700x1_holder/: 21700x1.stl  21700x1.vol.FCStd  21700x1.vol.FCStd1  CE3_21700x1.gcode  obj.glb  obj.stl
cmake/: Outputs.cmake  StandardOptions.cmake  Vcpkg.cmake
data/: 240119_temperaturetest_C6B2.ipynb  240209_temptest_C6B2.ipynb  PLAYGROUND_240209_temptest_C6B2.ipynb  forklift.py  lib_240209_temptest_C6B2.py  lib_240624_temp_profile_C6B2.py  lib_240626_temp_profile_C6B2.py  lib_240716_temp_profile_C4B1.py  lib_240718_temp_profile_C4B1.py
data/240119_temperaturetest_C6B2/: EIS_C6B2_temperaturetest_240119
data/240209_temptest_C6B2/: chamber.csv  t_cham_data_02-08-2024-14-54-59.csv
data/240624_temp_profile_C6B2/: TestData.csv  TestProcedure.csv  _gen_chamber.sh  _gen_chamber_data.py  chamber.csv
data/240626_temp_profile_C6B2/: TestData.csv  TestProcedure.csv  _gen_chamber_data.py  chamber.csv
data/240716_temp_profile_C4B1/: TestData.csv  TestProcedure.csv  _gen_chamber_data.py  chamber.csv
data/240718_temp_profile_C4B1/: TestData.csv  TestProcedure.csv
data_raw/: 240209_temptest_C6B2.ipynb  lib_240209_temptest_C6B2.py
data_raw/240119_temperaturetest_C6B2/: TestProcedure.csv  chamber.csv
data_raw/240209_temptest_C6B2/: TestProcedure.csv  t_cham_data_02-12-2024-06-02-36.csv
docs/: book.toml  conf.py  index.rst
docs/src/: SUMMARY.md  introduction.md
examples/: CMakeLists.txt  __main__.py
examples/air_effect/: __init__.py  air_params.json  estimate_parameters.py  eval_air_estimation.m  eval_noair_estimation.m  gen_data.m  params.json  params_est_air.json  params_est_noair.json  params_expected_noair.json  params_obtained_air.json  params_obtained_noair.json  plot_results.py  run.py  sim_air.slx  sim_noair.slx  use_plots.py  validation_air_expected.csv  validation_air_obtained.csv  validation_noair_expected.csv  validation_noair_obtained.csv
examples/lab240716/: CMakeLists.txt  main.c
examples/lab_240209/: estimate_parameters.py
examples/lab_240626/: params_est_noair.json
examples/lab_240716/: CMakeLists.txt  __init__.py  constants.py  estimate_parameters.py  estimated_parameters.json  eta_values.csv  lab_240716.slx  main.c  plot_results.py  py2_evaluate_model.m  py2_load_model.m  py_evaluate_model.m  py_load_model.m  py_set_model_parameters.m  run_simulation.m  sim_noair.slx
examples/lab_240716_cpp/: CMakeLists.txt  main.cpp
examples/parameter_estimation/: __init__.py
examples/python/: lab_240716.py  lab_240716_hook.py  lab_240716_params.py  lab_240716_step.py
functions/: polarization_resistance_deffuzify.m
fuzzy/: polarization_resistance.fis
include/lion/: app.h  lion.h  names.h  params.h  sim.h  status.h  vector.h
include/lionm/: current.h  ehc.h  generated_heat.h  internal_resistance.h  lionm.h  open_circuit.h  params.h  voltage.h
include/lionpp/: app.hpp  lion.hpp  sim.hpp  status.hpp  vector.hpp
include/lionu/: fuzzy.h  kde.h  knn.h  log.h  macros.h  math.h  mem.h
instructions/: docs.html  installation.html
instructions/installation/: linux.html  macos.html  windows.html
pysrc/lion/: __init__.py  app.py  app_config.py  dtypes.py  exceptions.py  sim.py  sim_config.py  status.py  vector.py
pysrc/lion_ffi/: __init__.py  cffi_build.py  config.py
pysrc/lion_utils/: choose.py  (+1 more)
reference/: api_reference.html  api_reference_functions.html  api_reference_types.html  examples.html
scripts/: phm_plots.py
simulations/: battery_few_sim.slx  battery_sim.slx  cell_sim.slx
sldd/: battery.sldd
slx/: ac.slx  battery.slx  battery.slx.r2022a  battery_noair.slx  battery_sim.slx  polarization.slx  voc.slx  voc.slx.r2022a
src/: CMakeLists.txt
src/lion_app/: CMakeLists.txt  app.c  app_debug.c  app_run.c  app_run.h  files.c  files.h  init.h  mem.c  mem.h  names.c  params.c  vector.c
src/lion_app/solver/: jacobian.h  jacobian_analytical.c  jacobian_twopoint.c  sys.c  update.c  update.h
src/lion_core/: CMakeLists.txt  app.c  init.c  init.h  temp.c  vector.c
src/lion_cpp/: CMakeLists.txt  app.cpp  app_config.cpp  app_params.cpp  sim.cpp  sim_config.cpp  sim_params.cpp
src/lion_math/: CMakeLists.txt  capacity.c  capacity.h  current.c  current.h  ehc.c  ehc.h  generated_heat.c  generated_heat.h  internal_resistance.c  internal_resistance.h  lion_math.h  open_circuit.c  open_circuit.h  params.h  voltage.c  voltage.h
src/lion_math/dynamics/: dynamics.h  soc.c  soc.h  soh.c  soh.h  temperature.c  temperature.h
src/lion_math/fuzzy/: gaussian.c  sigmoid.c
src/lion_sim/: CMakeLists.txt  files.c  files.h  knn.c  mem.c  mem.h  names.c  params.c  sim.c  sim_debug.c  sim_run.c  sim_run.h  vector.c
src/lion_sim/solver/: jacobian.h  jacobian_analytical.c  jacobian_twopoint.c  sys.c  sys.h  update.c  update.h
src/lion_solver/: CMakeLists.txt
src/lion_utils/: CMakeLists.txt  files.c  gaussian_kde.c  macros.h  math.c  mem.c  test.h
src/lion_utils/fuzzy/: gaussian.c  sigmoid.c
src/lion_utils/regression/: knn.c
sys/: build.sh  clean.sh  doc.sh  test.sh
tests/unittest/: CMakeLists.txt
tests/unittest/quick/: test_math_algebraic.c  test_math_differential.c  test_vector.c  test_vector_creation.c  test_vector_methods.c  test_vector_modification.c
tests/unittest/quick/resources/: vector_create1.csv
tools/: download_data.sh  download_forklift_data.sh  forklift_tocsv.py  gen_todo.sh
usage/: configuration.html  parameters.html  system.html
(+227 files in other folders)
