[project]
name = "lion"
description = "Lithium-ion battery simulator"
readme = "README.md"
version = "0.2.0"
license = {file = "LICENSE"}
authors = [{name = "CASE"}]
maintainers = [
    {name = "Cristobal Allendes", email = "callendes.molina@gmail.com"},
]
requires-python = ">=3.11"
dependencies = ["numpy>=1.0.0", "cffi>=1.17.0", "cmake>=3.12", "pandas>=2.0.0"]
keywords = ["lithium", "simulator", "gsl"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
homepage = "https://github.com/case-ev/lion"
documentation = "https://readthedocs.org"
repository = "https://github.com/case-ev/lion"

[build-system]
requires = ["setuptools>=42.0", "wheel", "cffi", "cmake>=3.12"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "pysrc"}
packages = [
    "lion",
    "lion.models",
    "lion_ffi",
    "lion_ffi.ffi",
    "lion_ffi.ffi.solver",
    "lion_utils",
]
include_package_data = True

[tool.pytest.ini_options]
testpaths = ["tests/python"]
pythonpath = ["pysrc"]

