[metadata]
name = lion
description = Lithium-ion battery simulator
author = CASE
license = MIT
license_files = [LICENSE]
platforms = supported-platforms
version = 0.1.0
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

# These options can be changed according to your project
[options]
packages =
    lion
    lion_ffi
    lion_ffi.config
    lion_ffi.ffi
python_requires = >=3.7
package_dir =
    =pysrc
zip_safe = no

[options.package_data]
lion_ffi =
    *.so
    *.dll
