file(GLOB EXAMPLE_ROOT_SOURCE *.c)
file(GLOB EXAMPLE_ROOT_HEADER *.h)

set(EXAMPLE_NAME ex.lab_240716)

add_executable(${EXAMPLE_NAME} ${EXAMPLE_ROOT_HEADER} ${EXAMPLE_ROOT_SOURCE})

target_link_libraries(
  ${EXAMPLE_NAME} PUBLIC ${PROJECT_SIM_NAME} ${PROJECT_MATH_NAME}
                         ${PROJECT_UTILS_NAME})

target_include_directories(
  ${EXAMPLE_NAME} PUBLIC ${PROJECT_BINARY_DIR} ${PROJECT_SOURCE_DIR}
                         ${PROJECT_HEADERS} ${CMAKE_SOURCE_DIR})

set_target_properties(
  ${EXAMPLE_NAME}
  PROPERTIES RUNTIME_OUTPUT_DIRECTORY_DEBUG
             ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/debug
             RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
