file(GLOB APP_ROOT_SOURCE *.c)
file(GLOB APP_ROOT_HEADER *.h)
file(GLOB APP_SLVR_SOURCE solver/*.c)
file(GLOB APP_SLVR_HEADER solver/*.h)

add_library(${PROJECT_APP_NAME} ${APP_ROOT_HEADER} ${APP_ROOT_SOURCE}
                                ${APP_SLVR_HEADER} ${APP_SLVR_SOURCE})

target_link_libraries(
  ${PROJECT_APP_NAME} PUBLIC ${PROJECT_MATH_NAME} ${PROJECT_UTILS_NAME}
                             ${GSL_LIBRARIES})
target_include_directories(
  ${PROJECT_APP_NAME}
  PUBLIC ${PROJECT_BINARY_DIR} ${PROJECT_SOURCE_DIR}
         ${PROJECT_SOURCE_DIR_LOCATION} ${PROJECT_HEADERS} ${CMAKE_SOURCE_DIR}
         ${GSL_INCLUDE_DIRS})

set_target_properties(${PROJECT_APP_NAME} PROPERTIES VERSION ${PROJECT_VERSION} SOVERSION ${PROJECT_VERSION_MAJOR})
if(WIN32)
  add_custom_command(TARGET ${PROJECT_APP_NAME} POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E copy $<TARGET_RUNTIME_DLLS:${PROJECT_APP_NAME}> $<TARGET_FILE_DIR:${PROJECT_APP_NAME}>
    COMMAND_EXPAND_LISTS
  )
endif()
