file(GLOB CORE_ROOT_SOURCE *.c)
file(GLOB CORE_ROOT_HEADER *.h)

add_library(${PROJECT_CORE_NAME} ${CORE_ROOT_HEADER} ${CORE_ROOT_SOURCE})

target_link_libraries(${PROJECT_CORE_NAME} PUBLIC ${PROJECT_UTILS_NAME}
    GSL)
target_include_directories(
  ${PROJECT_CORE_NAME}
  PUBLIC ${PROJECT_BINARY_DIR} ${PROJECT_SOURCE_DIR}
         ${PROJECT_SOURCE_DIR_LOCATION} ${PROJECT_HEADERS} ${CMAKE_SOURCE_DIR})
)
