file(GLOB SLVR_ROOT_SOURCE *.c)
file(GLOB SLVR_ROOT_HEADER *.h)

add_library(${PROJECT_SLVR_NAME} ${SLVR_ROOT_HEADER} ${SLVR_ROOT_SOURCE})

target_link_libraries(
  ${PROJECT_SLVR_NAME} PUBLIC ${PROJECT_MATH_NAME} ${PROJECT_UTILS_NAME}
                              ${GSL_LIBRARIES})
target_include_directories(
  ${PROJECT_SLVR_NAME}
  PRIVATE ${PROJECT_BINARY_DIR} ${PROJECT_SOURCE_DIR}
          ${PROJECT_SOURCE_DIR_LOCATION} ${PROJECT_HEADERS} ${CMAKE_SOURCE_DIR}
          ${GSL_INCLUDE_DIRS})
